{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 14,
  "lineage": "873e5d36-d3b7-b1dc-ce52-80d8bfd1348f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c789ea01a0cdba4",
            "domain": "vpc",
            "id": "eipalloc-07c789ea01a0cdba4",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-110-141.compute-1.amazonaws.com",
            "public_ip": "18.235.110.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dummy_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:internet-gateway/igw-0aac724ed0a575ade",
            "id": "igw-0aac724ed0a575ade",
            "owner_id": "736116236436",
            "tags": {
              "Name": "IGW: For dummy_vpc-us-east-1"
            },
            "tags_all": {
              "Name": "IGW: For dummy_vpc-us-east-1"
            },
            "vpc_id": "vpc-067e6679a8db59afb"
          },
          "dependencies": [
            "aws_vpc.dummy_vpc-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dummy_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c789ea01a0cdba4",
            "association_id": "eipassoc-06787fe18e2a11dc1",
            "connectivity_type": "public",
            "id": "nat-0b2cde20ad404a0d8",
            "network_interface_id": "eni-05796a63be199ba79",
            "private_ip": "10.0.2.184",
            "public_ip": "18.235.110.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06ef773a5f78385ad",
            "tags": {
              "Name": "Private NAT GW: For dummy_vpc-us-east-1"
            },
            "tags_all": {
              "Name": "Private NAT GW: For dummy_vpc-us-east-1"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.dummy_private_subnets",
            "aws_vpc.dummy_vpc-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dummy_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:route-table/rtb-000eba4a25b74a85e",
            "id": "rtb-000eba4a25b74a85e",
            "owner_id": "736116236436",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e6679a8db59afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dummy_vpc-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dummy_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:route-table/rtb-015d5f21f582295de",
            "id": "rtb-015d5f21f582295de",
            "owner_id": "736116236436",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aac724ed0a575ade",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-067e6679a8db59afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dummy_public_internet_gateway",
            "aws_vpc.dummy_vpc-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dummy_private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05074c7dabe6cc0e3",
            "route_table_id": "rtb-000eba4a25b74a85e",
            "subnet_id": "subnet-06ef773a5f78385ad"
          },
          "dependencies": [
            "aws_route_table.dummy_private_route_table",
            "aws_subnet.dummy_private_subnets",
            "aws_vpc.dummy_vpc-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dummy_public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085d55ab12198a863",
            "route_table_id": "rtb-015d5f21f582295de",
            "subnet_id": "subnet-0f00990130194613e"
          },
          "dependencies": [
            "aws_internet_gateway.dummy_public_internet_gateway",
            "aws_route_table.dummy_public_route_table",
            "aws_subnet.dummy_public_subnets",
            "aws_vpc.dummy_vpc-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dummy_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:subnet/subnet-06ef773a5f78385ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ef773a5f78385ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736116236436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "vpc_id": "vpc-067e6679a8db59afb"
          },
          "dependencies": [
            "aws_vpc.dummy_vpc-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dummy_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:subnet/subnet-0f00990130194613e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f00990130194613e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "736116236436",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-067e6679a8db59afb"
          },
          "dependencies": [
            "aws_vpc.dummy_vpc-us-east-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dummy_vpc-us-east-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:736116236436:vpc/vpc-067e6679a8db59afb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-094a1cc2708dcc326",
            "default_route_table_id": "rtb-07eb2031ae637a9c5",
            "default_security_group_id": "sg-009163bfeee8e3b3f",
            "dhcp_options_id": "dopt-0225a1f823354f824",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067e6679a8db59afb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07eb2031ae637a9c5",
            "owner_id": "736116236436",
            "tags": {
              "Name": "VPC: dummy_vpc-us-east-1"
            },
            "tags_all": {
              "Name": "VPC: dummy_vpc-us-east-1"
            }
          }
        }
      ]
    }
  ]
}